--- a/Nirvana/project.json
+++ b/Nirvana/project.json
@@ -7,6 +7,7 @@
       "mappings": {
         "BlockCompression.dll": "../VariantAnnotation/Packages/BlockCompression.dll",
         "libBlockCompression.so": "../VariantAnnotation/Packages/libBlockCompression.so"
+        "libBlockCompression.dylib": "../VariantAnnotation/Packages/libBlockCompression.dylib"
       }
     }
   },
