--- a/VariantAnnotation/CommonAssemblyInfo.props
+++ b/VariantAnnotation/CommonAssemblyInfo.props
@@ -5,6 +5,6 @@
     <FileVersion>1.6.2.0</FileVersion>
     <AssemblyVersion>1.6.2.0</AssemblyVersion>
     <Version>1.6.2</Version>
-    <Authors>Stromberg, Roy, Lajugie, Jiang, and Li</Authors>
+    <Authors>Stromberg, Roy, Lajugie, Jiang, Li, and Kang</Authors>
   </PropertyGroup>
 </Project>
