output ensembl reference name in tsv increase saDatabase dataversion and schema version (since omim schema changed)

--- a/SAUtils/Properties/launchSettings.json
+++ b/SAUtils/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "SAUtils": {
       "commandName": "Project",
-      "commandLineArgs": "createSA --ref e:\\Data\\Nirvana\\References\\5.2\\Homo_sapiens.GRCh37.Nirvana.dat  -d \\\\ussd-prd-isi04\\Nirvana\\Development\\IntermediateTsvs\\2017-05\\GRCh37 -o E:\\Data\\Nirvana\\SupplementaryAnnotation\\tmp\\GRCh37",
+      "commandLineArgs": "createSA --ref e:\\Data\\Nirvana\\References\\5.2\\Homo_sapiens.GRCh37.Nirvana.dat  -d E:\\Data\\Nirvana\\IntermediateTSV\\39.2\\GRCh37 -o  E:\\Data\\Nirvana\\SupplementaryDatabase\\39.3\\GRCh37",
       "workingDirectory": "E:\\Data\\Nirvana\\bugfixes"
     },
     "OMIM_SK": {
