--- a/SAUtils/SAUtils.csproj
+++ b/SAUtils/SAUtils.csproj
@@ -10,5 +10,8 @@
     <ProjectReference Include="..\Compression\Compression.csproj" />
     <ProjectReference Include="..\VariantAnnotation\VariantAnnotation.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="ExtractMiniXml\" />
+  </ItemGroup>
 
 </Project>
