--- a/Nirvana/Properties/launchSettings.json
+++ b/Nirvana/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     },
     "RR_Nirvana": {
       "commandName": "Project",
-      "commandLineArgs": "--cache C:\\Development\\Cache\\24\\GRCh37\\Ensembl84 --sd C:\\Development\\SupplementaryDatabase\\39\\GRCh37 --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh38.Nirvana.dat --in HCC1187BL_HCC1187C_HSX-somatic-SV-chr1-GRCh37.vcf.gz --out hcc",
+      "commandLineArgs": "--cache C:\\Development\\Cache\\24\\GRCh37\\Ensembl84 --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --in ClinVar20150901_ShankarBugNIR1202-ClinVar_dbSNP-unknown-WG-hg19.vcf.gz --out clinvar_otf",
       "workingDirectory": "C:\\Development\\TestDatasets"
     },
     "MS_ClinVar": {
