--- a/SAUtils/Properties/launchSettings.json
+++ b/SAUtils/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     },
     "RR_sautils": {
       "commandName": "Project",
-      "commandLineArgs": "createTSV --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --cvr C:\\Development\\TestDatasets\\OneMillion.xml -o TestSa",
+      "commandLineArgs": " createGnomadTsv --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat  -i C:\\Development\\ExternalDataSources\\Gnomad\\2.0.1 --out C:\\Development\\IntermediateTsvs\\GRCh37",
       "workingDirectory": "C:\\Development\\TestDatasets"
     }
   }
