--- a/VariantAnnotation/VariantAnnotation.csproj
+++ b/VariantAnnotation/VariantAnnotation.csproj
@@ -7,8 +7,10 @@
     <None Include="Algorithms\IntervalExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\CommandLine\CommandLine.csproj" />
     <ProjectReference Include="..\CommonUtilities\CommonUtilities.csproj" />
     <ProjectReference Include="..\Compression\Compression.csproj" />
+    <ProjectReference Include="..\ErrorHandling\ErrorHandling.csproj" />
     <ProjectReference Include="..\VariantAnnotation.Interface\VariantAnnotation.Interface.csproj" />
   </ItemGroup>
   <ItemGroup>
