Cleaned up our version providers and updated our version to 2.0.1

--- a/Nirvana/Properties/launchSettings.json
+++ b/Nirvana/Properties/launchSettings.json
@@ -1,9 +1,7 @@
 {
   "profiles": {
     "Nirvana": {
-      "commandName": "Project",
-      "commandLineArgs": "-i E:\\Data\\Nirvana\\bugfixes\\test_input2_GRCh37.vcf -c E:\\Data\\Nirvana\\Cache\\24\\GRCh37\\Both84 -r E:\\Data\\Nirvana\\References\\5.2\\Homo_sapiens.GRCh37.Nirvana.dat -o test_mother_new --sd \\\\ussd-prd-isi04\\Nirvana\\Development\\SupplementaryDatabase\\40\\GRCh37",
-      "workingDirectory": "E:\\Data\\Nirvana\\bugfixes"
+      "commandName": "Project"
     },
     "YJ_Nirvana": {
       "commandName": "Project",
