--- a/SAUtils/Properties/launchSettings.json
+++ b/SAUtils/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     },
     "RR_sautils": {
       "commandName": "Project",
-      "commandLineArgs": "createSA --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat  --out c:\\Development\\SupplementaryDatabase\\40.4\\GRCh37 --gene c:\\Development\\IntermediateTsvs\\GRCh37\\omim_20170905.gene.tsv.gz --gene c:\\Development\\IntermediateTsvs\\GRCh37\\geneScores_0.3.1.gene.tsv.gz",
+      "commandLineArgs": " createSA --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat  --dir C:\\Development\\IntermediateTsvs\\GRCh37 --out c:\\Development\\SupplementaryDatabase\\41.4\\GRCh37",
       "workingDirectory": "C:\\Development\\TestDatasets"
     },
     "MITOMAP": {
