--- a/CacheUtils/CacheUtils.csproj
+++ b/CacheUtils/CacheUtils.csproj
@@ -3,6 +3,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <OutputPath>..\bin\$(Configuration)</OutputPath>
+    <DebugType>Full</DebugType>
   </PropertyGroup>
   <Import Project="..\VariantAnnotation\CommonAssemblyInfo.props" />
   <ItemGroup>
