--- a/VariantAnnotation/VariantAnnotation.csproj
+++ b/VariantAnnotation/VariantAnnotation.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <OutputPath>..\bin\$(Configuration)</OutputPath>
+    <DebugType>Full</DebugType>
   </PropertyGroup>
   <ItemGroup>
     <None Include="Algorithms\IntervalExtensions.cs" />
