keeping saHeaders and geneHeaders separate

--- a/SAUtils/Properties/launchSettings.json
+++ b/SAUtils/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     },
     "RR_sautils": {
       "commandName": "Project",
-      "commandLineArgs": " createSA --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh38.Nirvana.dat  --dir C:\\Development\\IntermediateTsvs\\GRCh38 --out c:\\Development\\SupplementaryDatabase\\41.5\\GRCh38",
+      "commandLineArgs": " createSA --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat  --dir C:\\Development\\IntermediateTsvs\\GRCh37 --out c:\\Development\\SupplementaryDatabase\\test",
       "workingDirectory": "C:\\Development\\TestDatasets"
     },
     "MITOMAP": {
