--- a/VariantAnnotation/VariantAnnotation.csproj
+++ b/VariantAnnotation/VariantAnnotation.csproj
@@ -17,5 +17,8 @@
   <ItemGroup>
     <Folder Include="PhyloP\" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Composition" Version="1.0.31" />
+  </ItemGroup>
   <Import Project="CommonAssemblyInfo.props" />
 </Project>
