--- a/Nirvana/Properties/launchSettings.json
+++ b/Nirvana/Properties/launchSettings.json
@@ -10,7 +10,7 @@
     },
     "RR_Nirvana": {
       "commandName": "Project",
-      "commandLineArgs": "--cache C:\\Development\\Cache\\25\\GRCh37\\Ensembl90 --sd C:\\Development\\SupplementaryDatabase\\41\\GRCh37 --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --in C:\\Development\\TestDatasets\\Mother.genome.vcf.gz --out C:\\Development\\TestDatasets\\momGen",
+      "commandLineArgs": "--cache C:\\Development\\Cache\\25\\GRCh37\\Ensembl90 --sd C:\\Development\\SupplementaryDatabase\\41\\GRCh37 --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --in c:\\Development\\TestDatasets\\NewExpansionHunter_NA12877-ExpansionHunter-Germline-short-hg19.vcf.gz --out c:\\Development\\TestDatasets\\expHunt --plugin C:\\Development\\ExpansionHunterPlugin\\ExpansionHunterPlugin\\bin\\Debug\\netcoreapp2.0",
       "workingDirectory": "C:\\Development\\TestDatasets"
     },
     "MS_ClinVar": {
