Feature/top med 2980 (#107)
* Adding a topmed parser

* basic object created

* creating the Tsv writer

* committing work and moving on to other stuff

* creating the main function

* bug fixes for TSV generator. creating mapper for GRCh37

* pre-test code

* crashing at leftovers.add since rsId already exists

* only saving positions with dbSnp id. Chr is implicit

* writing out unmapped items for second pass

* writing out unmapped items and possible mappings for second pass

* adding located and unlocated leftover data structures

* using one rsId to infer position for all rsIds of that position

* leftovers working properly

* sharing writers to avoid temp cross over files

* chrom may be absent in source but present in destination. So, we need to allow creating writers during mapping leftovers.

* finished producing a file

* restroring Nirvana.cs

* bringing back Annotator.cs

* using trygetvalue in dictionary

--- a/SAUtils/Properties/launchSettings.json
+++ b/SAUtils/Properties/launchSettings.json
@@ -12,8 +12,8 @@
     },
     "RR_sautils": {
       "commandName": "Project",
-      "commandLineArgs": " createSA --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat  --dir C:\\Development\\IntermediateTsvs\\GRCh37 --out c:\\Development\\SupplementaryDatabase\\test",
-      "workingDirectory": "C:\\Development\\TestDatasets"
+      "commandLineArgs": " remapWithDbsnp --src topMed.dbsnp.GRCh38.vcf.gz --des C:\\Development\\ExternalDataSources\\dbSNP\\150\\GRCh37\\All_20170403.vcf.gz",
+      "workingDirectory": "C:\\Development\\ExternalDataSources\\TOPMed\\freeze5"
     },
     "MITOMAP": {
       "commandName": "Project",
