--- a/Nirvana/Properties/launchSettings.json
+++ b/Nirvana/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     },
     "RR_Nirvana": {
       "commandName": "Project",
-      "commandLineArgs": " --cache C:\\Development\\Cache\\25\\GRCh37\\Ensembl90 --sd C:\\Development\\SupplementaryDatabase\\42\\GRCh37 --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --in AU144A_BadVariant-pseq-unknown-single-hg19.vcf.gz --out badVariant",
+      "commandLineArgs": " --cache C:\\Development\\Cache\\25\\GRCh37\\Ensembl90 --sd C:\\Development\\SupplementaryDatabase\\42\\GRCh37 --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --plugin c:\\Development\\loftee\\loftee\\bin\\Debug\\netcoreapp2.0\\ --in ZodiacR2_COSMICv72_IndelMNVs_40bpOrLess_2D-dummyInfo-dummyInfo-short-hg19.vcf.gz --out zodiac",
       "workingDirectory": "C:\\Development\\TestDatasets"
     },
     "MS_ClinVar": {
