--- a/Nirvana/Properties/launchSettings.json
+++ b/Nirvana/Properties/launchSettings.json
@@ -37,7 +37,7 @@
     },
     "RR Nirvana": {
       "commandName": "Project",
-      "commandLineArgs": " --cache C:\\Development\\Cache\\25\\GRCh37\\Ensembl90 --sd C:\\Development\\SupplementaryDatabase\\42\\GRCh37 --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat --in AU144A_BadVariant-pseq-unknown-single-hg19.vcf.gz --out badVariant",
+      "commandLineArgs": " --cache C:\\Development\\Cache\\26\\GRCh37\\Ensembl --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat  -i debug.vcf --out debug",
       "workingDirectory": "C:\\Development\\TestDatasets"
     },
     "SK Nirvana": {
