--- a/SAUtils/Properties/launchSettings.json
+++ b/SAUtils/Properties/launchSettings.json
@@ -12,8 +12,8 @@
     },
     "RR_sautils": {
       "commandName": "Project",
-      "commandLineArgs": " remapWithDbsnp --src topMed.dbsnp.GRCh38.vcf.gz --des C:\\Development\\ExternalDataSources\\dbSNP\\150\\GRCh37\\All_20170403.vcf.gz",
-      "workingDirectory": "C:\\Development\\ExternalDataSources\\TOPMed\\freeze5"
+      "commandLineArgs": " createOMIMTSV --gi \\\\ussd-prd-isi04\\Nirvana\\Development\\GeneSymbols\\gene_info_2016-10-17 --gi \\\\ussd-prd-isi04\\Nirvana\\Development\\GeneSymbols\\gene_info_2011-08-28 --hgnc \\\\ussd-prd-isi04\\Nirvana\\Development\\GeneSymbols\\hgnc_complete_set_2016-10-17.txt --in \\\\ussd-prd-isi04\\Nirvana\\Development\\ExternalDataSources\\OMIM\\2018-02-13\\genemap2.txt --mim \\\\ussd-prd-isi04\\Nirvana\\Development\\ExternalDataSources\\OMIM\\2018-02-13\\mim2gene.txt --out .",
+      "workingDirectory": "C:\\Development\\ExternalDataSources\\Omim\\"
     },
     "MITOMAP": {
       "commandName": "Project",
