--- a/Nirvana/Properties/launchSettings.json
+++ b/Nirvana/Properties/launchSettings.json
@@ -37,7 +37,7 @@
     },
     "RR Nirvana": {
       "commandName": "Project",
-      "commandLineArgs": " --cache C:\\Development\\Cache\\26\\GRCh37\\Ensembl --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat  -i debug.vcf --out debug",
+      "commandLineArgs": " --cache C:\\Development\\Cache\\26\\GRCh37\\Ensembl --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat  -i CanvasNS7-Canvas-Pedigree-WG-hg19.vcf.gz --out canvas7",
       "workingDirectory": "C:\\Development\\TestDatasets"
     },
     "SK Nirvana": {
