Feature/phantom for test 2931 (#116)
* Removed ICdnaCoordinateMap and introduced ITranscriptRegion. Broke GFF output and unloaded the unit tests.

* Minor renaming of maps to regions

* create new project

* WIP

* Cache generation with the transcript regions is now working.

* Added transcript region unit tests.

* first_test

* WIP

* done

* add files

* revision after code review

* WIP

* WIP

* Made good progress in updating the transcript annotator behavior.

* sample genotype matrix; position object buffer

* Updated a few more unit tests - now 23 unit tests are failing (11 are end-to-end).

* Updated the full and reduced transcript annotators.

* WIP

* Added AlleleIndexBlock and AlleleSet

* WIP

* Add FunctionBlockIdentifier

* Implement intersect function for intervals

* rewrite readWriteUtilities

* update allele block with function block information

* recomposer

* Add AssemblyInfo and Unit tests

* Keep the allele blocks from the same sample the same range

* use IVariant[] to extract Alt alleles instead of AltAllele[]

* recomposer implemented

* add PositionProcessor

* Updated ReadWriteUtilities

* changed to the new buffering method: purge buffer only when the new position not overlapping with any genes in buffer

* VCF output implemented

* Most unit tests are now working. Just need the end-to-end tests now.

* Added bam_edit_status to the transcripts.

* Added ability to remove failed bam_edit_status. Added intron cDNA coordinates. Fixed GetPositionAndOffset to handle intron coordinates.

* Added NumExons to the cache file.

* Just some consequence and gene fusion unit tests left to fix.

* bug fix after testing on the real sample

* Fixed the null coding region bug.

* Better handle the ref variants

* improve the logic of position process

* Updated xUnit. Fixed unit test issues. Added region start/end index to MappedPosition. Fixed covered cDNA and CDS posit

--- a/Nirvana/Properties/launchSettings.json
+++ b/Nirvana/Properties/launchSettings.json
@@ -25,25 +25,31 @@
       "commandLineArgs": "-c Cache\\26\\GRCh37\\Ensembl -r References\\5\\Homo_sapiens.GRCh37.Nirvana.dat -i Data\\Mother\\Mother.vcf.gz -o mother",
       "workingDirectory": "E:\\Data\\Nirvana"
     },
-    "MS Platypus": {
+    "MS_ClinVar": {
       "commandName": "Project",
-      "commandLineArgs": "-c Cache\\26\\GRCh37\\Ensembl -r References\\5\\Homo_sapiens.GRCh37.Nirvana.dat -i Data\\Platypus\\Platypus-Platypus-unknown-short-hg19.vcf.gz -o platypus",
+      "commandLineArgs": " -c Cache\\25\\GRCh37\\Ensembl90 -r References\\5\\Homo_sapiens.GRCh37.Nirvana.dat -i Data\\ClinVar\\ClinVar20150901_ShankarBugNIR1202-ClinVar_dbSNP-unknown-WG-hg19.vcf.gz -o clinvar",
       "workingDirectory": "E:\\Data\\Nirvana"
     },
-    "MS Zodiac": {
+    "MS_Mother": {
       "commandName": "Project",
-      "commandLineArgs": "-c Cache\\26\\GRCh37\\Ensembl -r References\\5\\Homo_sapiens.GRCh37.Nirvana.dat -i Data\\Zodiac\\Zodiac_all_observed-dummyInfo-dummyInfo-short-hg19.vcf.gz -o zodiac",
+      "commandLineArgs": "-c Cache\\25\\GRCh37\\Ensembl90 -r References\\5\\Homo_sapiens.GRCh37.Nirvana.dat -i Data\\Mother\\Mother.vcf.gz -o mother --sd SupplementaryDatabase\\41\\GRCh37",
       "workingDirectory": "E:\\Data\\Nirvana"
     },
-    "RR Nirvana": {
-      "commandName": "Project",
-      "commandLineArgs": " --cache C:\\Development\\Cache\\26\\GRCh37\\Ensembl --ref C:\\Development\\References\\5\\Homo_sapiens.GRCh37.Nirvana.dat  -i CanvasNS7-Canvas-Pedigree-WG-hg19.vcf.gz --out canvas7",
-      "workingDirectory": "C:\\Development\\TestDatasets"
-    },
+
     "SK Nirvana": {
       "commandName": "Project",
-      "commandLineArgs": "-i \\\\ussd-prd-isi04\\Nirvana\\Data\\Zodiac\\Zodiac_Eco.vcf -c \\\\ussd-prd-isi04\\Nirvana\\Cache\\latest\\GRCh37\\Both84 -r \\\\ussd-prd-isi04\\Nirvana\\References\\latest\\Homo_sapiens.GRCh37.Nirvana.dat -o test_out --sd E:\\Nirvana_resources\\ExternalDataSources\\OMIM\\2017-08-15\\test\\createSA\\",
-      "workingDirectory": "E:\\temp"
+      "commandLineArgs": "-i E:\\Nirvana_resources\\test_runs\\test_Phantom\\MS_data\\NA12878_AH72T3CCXX-l2_S1.genome.vcf.gz -c E:\\Nirvana_resources\\Nirvana\\Development\\Cache\\25\\GRCh38\\Both90 -r E:\\Nirvana_resources\\Nirvana\\Development\\References\\5\\Homo_sapiens.GRCh38.Nirvana.dat -o NIR_NA12878 ",
+      "workingDirectory": "E:\\Nirvana_resources\\test_runs\\test_Phantom\\"
+    },
+    "SK Pedigree": {
+      "commandName": "Project",
+      "commandLineArgs": "-i E:\\Nirvana_resources\\test_runs\\test_Phantom\\test_data\\Pedigree.vcf.gz -c E:\\Nirvana_resources\\Nirvana\\Development\\Cache\\26\\GRCh38\\Ensembl -r E:\\Nirvana_resources\\Nirvana\\Development\\References\\5\\Homo_sapiens.GRCh38.Nirvana.dat --vcf  -o Pedigree_NIR_Phan_out",
+      "workingDirectory": "E:\\Nirvana_resources\\test_runs\\test_Phantom\\"
+    },
+    "SK bugfix": {
+      "commandName": "Project",
+      "commandLineArgs": "-i E:\\Nirvana_resources\\test_runs\\test_Phantom\\test_data\\Pedigree_bugfix.vcf -c E:\\Nirvana_resources\\Nirvana\\Development\\Cache\\26\\GRCh38\\Ensembl -r E:\\Nirvana_resources\\Nirvana\\Development\\References\\5\\Homo_sapiens.GRCh38.Nirvana.dat --vcf -o Pedigree_bugfix",
+      "workingDirectory": "E:\\Nirvana_resources\\test_runs\\test_Phantom"
     }
   }
 }
