--- a/Nirvana/Nirvana.csproj
+++ b/Nirvana/Nirvana.csproj
@@ -17,6 +17,7 @@
     <ProjectReference Include="..\Compression\Compression.csproj" />
     <ProjectReference Include="..\ErrorHandling\ErrorHandling.csproj" />
     <ProjectReference Include="..\Jasix\Jasix.csproj" />
+    <ProjectReference Include="..\Phantom\Phantom.csproj" />
     <ProjectReference Include="..\VariantAnnotation.Interface\VariantAnnotation.Interface.csproj" />
     <ProjectReference Include="..\VariantAnnotation\VariantAnnotation.csproj" />
     <ProjectReference Include="..\Vcf\Vcf.csproj" />
