--- a/SAUtils/SAUtils.csproj
+++ b/SAUtils/SAUtils.csproj
@@ -13,4 +13,7 @@
     <ProjectReference Include="..\Compression\Compression.csproj" />
     <ProjectReference Include="..\VariantAnnotation\VariantAnnotation.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Interface\" />
+  </ItemGroup>
 </Project>
